<?xml version="1.0" encoding="utf-8"?>
<resources  xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="builtio_prompt_tenant">tenant</string>
    <string name="builtio_prompt_email">email</string>
    <string name="builtio_prompt_password">password</string>
    <string name="builtio_prompt_retype_passsword">retype password</string>
    <string name="builtio_action_sign_in_short">Sign in</string>
    <string name="builtio_login_progress_signing_in">Signing in&#8230;</string>
    <string name="builtio_log_in">Log In</string>
    <string name="builtio_google_login">Google</string>
    <string name="builtio_twitter_login">Twitter</string>
    <string name="builtio_sign_up">Sign up</string>
    <string name="builtio_or_you_can_login_with">or you can login with</string>
    <string name="builtio_dont_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="builtio_account_name">account name</string>
    <string name="builtio_email">email</string>
    <string name="builtio_search">Search</string>
    <string name="builtio_back">Back</string>
    <string name="builtio_choose_options_title">Choose Options</string>
    <string name="builtio_no_data_text"> No Data</string>
    <string name="builtio_sdcard_not_found_error_text">SD card not found</string>
    <string name="builtio_select_picture_text">Select</string>
    <string name="builtio_capture_video_text">Video size should not be more than 10 MB</string>
    <string name="builtio_image_capture_by_camera_text">Image capture by camera</string>
    <string name="builtio_record_video_button">Record video</string>
    <string name="builtio_choose_from_library_button">Choose from library</string>

    <!-- <asset and choose pic > -->
    <string name="builtio_choose_from_gallery_button">Choose from Gallery</string>
    <string name="builtio_click_a_photo_button">Click a Photo</string>


    <!-- PulltoRefresh Strings -->
    <string name="builtio_pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="builtio_pull_to_refresh_release_label">Release to refresh…</string>
    <string name="builtio_pull_to_refresh_refreshing_label">Loading…</string>
    <string name="builtio_no_more">No more objects</string>
    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="builtio_pull_to_refresh_from_bottom_pull_label">@string/builtio_pull_to_refresh_pull_label</string>
    <string name="builtio_pull_to_refresh_from_bottom_release_label">@string/builtio_pull_to_refresh_release_label</string>
    <string name="builtio_pull_to_refresh_from_bottom_refreshing_label">@string/builtio_pull_to_refresh_refreshing_label</string>

</resources>