<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <!-- Sign Up form -->

    <ScrollView
        android:id="@+id/signupForm"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/builtio_login_background"
        android:fillViewport="true"
        android:isScrollContainer="true" >

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/closeLogoSignUp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_builtio_alertclose" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/signUpImageViewLogo"
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="70dp"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_builtio_logo_head" />

                <LinearLayout
                    android:id="@+id/idContainer"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/signUpImageViewLogo"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:orientation="vertical"
                    android:padding="1dp" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <com.raweng.built.userInterface.CustomEditTextErrorField
                            android:id="@+id/accountName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/builtio_item_background"
                            android:hint="@string/builtio_account_name"
                            android:inputType="text"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:singleLine="true" />

                        <com.raweng.built.userInterface.CustomEditTextErrorField
                            android:id="@+id/emailEditViewSignUp2"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/builtio_item_background"
                            android:hint="@string/builtio_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:singleLine="true" />

                        <com.raweng.built.userInterface.CustomEditTextErrorField
                            android:id="@+id/passwordSignUp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/builtio_item_background"
                            android:hint="@string/builtio_prompt_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:singleLine="true" />

                        <com.raweng.built.userInterface.CustomEditTextErrorField
                            android:id="@+id/retypePassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/builtio_item_background"
                            android:hint="@string/builtio_prompt_retype_passsword"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:singleLine="true" />

                        <Button
                            android:id="@+id/signMeUpButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/builtio_item_background_button_selector"
                            android:padding="10dp"
                            android:text="@string/builtio_sign_up"
                            android:textColor="@color/builtio_login_button_color"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>